--- a/source/html/examSelect.html
+++ b/source/html/examSelect.html
@@ -1,4 +1,4 @@
-<div class="main container-sm">
+<div class="main container">
     <div class="section">
         <h1 class="section-title">Bộ đề thi tiếng Anh</h1>
         <div class="section-container">
