--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -1,35 +1,42 @@
-<div class="footer-container">
-    <div class="footer">
-        <div class="container">
-            <div class="footer_logo">
-                <a href="#">
-                    <img class="logo-header" src="./assets/img/new-lgoteam.png" alt="logo-team4">
-                </a>
+<div class="footer background-primary">
+    <div class="flex-container container" style="align-items: stretch;">
+        <div class="section full-width">
+            <div class="section-container" style="background-color: transparent;">
+                <a href="index.php"><img src="./assets/img/abc-alphabet-basic-svgrepo-com.svg" alt=""
+                        style="width: 128px; height: 128px;"></a>
             </div>
         </div>
-        <div class="container footer__contact">
-            <h1 class="footer__heading">Liên hệ</h1>
-            <h3>Điện thoại:03xxxxxx</h3>
-            <h3>Email:examl@mail.com</h3>
-            <h3>Địa chỉ:Trường ĐH Quy Nhơn</h3>
+        <div class="section full-width">
+            <div class="section-container" style="background-color: transparent;">
+                <h2 class="heading">Các trang web</h2>
+                <a href="">Đăng nhập</a>
+                <a href="">Đăng kí</a>
+                <a href="">Bài thi</a>
+                <a href="">Tài liệu</a>
+                <a href="">Trợ giúp</a>
+                <a href="">Hỏi đáp</a>
+            </div>
         </div>
-        <div class="container footer_socials">
-            <h1 class="footer__heading">Kết nối với chúng tôi</h1>
-            <li>
-                <a href=""><i class="icon__socials fa-brands fa-facebook"></i></a>
-                Facebook
-            </li>
-            <li>
-                <a href=""><i class="icon__socials fa-brands fa-youtube"></i></a>
-                Youtube
-            </li>
-            <li>
-                <a href=""><i class="icon__socials fa-brands fa-tiktok"></i></a>
-                Tiktok
-            </li>
+        <div class="section full-width">
+            <div class="section-container" style="background-color: transparent;">
+                <h2 class="heading">Quyền riêng tư và điều khoản</h2>
+                <a href="">Nội quy</a>
+                <a href="">Điều khoản</a>
+                <a href="">Quyền riêng tư</a>
+            </div>
+        </div>
+        <div class="section full-width">
+            <div class="section-container" style="background-color: transparent;">
+                <h2 class="heading">Mạng xã hội</h2>
+                <a href="https://www.instagram.com/">Instagram</a>
+                <a href="https://www.facebook.com/">Facebook</a>
+                <a href="https://www.twitter.com/">Twitter</a>
+                <a href="https://www.youtube.com/">Youtube</a>
+            </div>
         </div>
     </div>
-    <div class="footer__more">
-        <p>© 2018 - 2022 LTW4.All rights reserved.</p>
+    <hr>
+    <div class="container">
+        <p>Copyright &#169 2022 Lập trình ứng dụng web. All rights reserved.</p>
     </div>
 </div>
