--- a/source/html/examSelect.html
+++ b/source/html/examSelect.html
@@ -47,6 +47,22 @@
                 </div>
             </div>
         </div>
+        <div class="section-title">
+            <div class="pagination">
+                <a href="#">&laquo;</a>
+                <a href="#">1</a>
+                <a href="#">2</a>
+                <a href="#">3</a>
+                <a href="#">4</a>
+                <a href="#">5</a>
+                <a href="#">6</a>
+                <a href="#">7</a>
+                <a href="#">8</a>
+                <a href="#">9</a>
+                <a href="#">10</a>
+                <a href="#">&raquo;</a>
+            </div>
+        </div>
     </div>
     <div class="section">
         <h1 class="section-title">Loại bài thi</h1>
