--- a/source/html/footer.html
+++ b/source/html/footer.html
@@ -2,8 +2,7 @@
     <div class="flex-container container" style="align-items: stretch;">
         <div class="section full-width">
             <div class="section-container" style="background-color: transparent;">
-                <a href="index.php"><img src="./assets/img/abc-alphabet-basic-svgrepo-com.svg" alt=""
-                        style="width: 128px; height: 128px;"></a>
+                <a href="index.php"><img src="./assets/img/logo.png" alt="" style="width: 128px; height: 128px;"></a>
             </div>
         </div>
         <div class="section full-width">
